--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@4tw/cypress-drag-drop",
+  "name": "@cexaflood/cypress-drag-drop",
   "version": "2.2.5",
   "description": "A cypress child command for drag'n'drop support.",
   "main": "index.js",
@@ -27,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/4teamwork/cypress-drag-drop/issues"
   },
-  "homepage": "https://github.com/4teamwork/cypress-drag-drop#readme",
+  "homepage": "https://github.com/CExAFlood/cypress-drag-drop#readme",
   "devDependencies": {
     "@4tw/eslint-config": "^0.6.0",
     "@4tw/prettier-config": "^1.0.3",
